# ReAct_Agent

./: .gitignore  README.md  pyproject.toml
src/react_agent/: __init__.py  agent.py  callbacks.py
tests/: test_agent.py
